--- a/src/Application/EpostBundle/Resources/views/Epost/new.html.twig
+++ b/src/Application/EpostBundle/Resources/views/Epost/new.html.twig
@@ -28,6 +28,8 @@ Ajouter Un Post
             <td>
                  <div>
                   {{ form_row(form.name) }}
+                         {{ form_row(form.tags) }}
+                             {{ form_row(form.categorie) }}
                 {#     {{ form_row(form.services) }}#}
               </div>
          
