--- a/src/Application/EpostBundle/Resources/views/Epost/show.html.twig
+++ b/src/Application/EpostBundle/Resources/views/Epost/show.html.twig
@@ -12,7 +12,17 @@
             width:100px;
 
         }
-            
+   
+        td {
+        padding: 5px;}
+        .table {
+       
+    margin: 10px;
+    min-width: 70%;
+  /* width: auto;*/
+    font-size: 12px;
+}
+
 div.viewpost
 {
 border:1px solid;
