--- a/src/Application/EpostBundle/Resources/views/Epost/edit.html.twig
+++ b/src/Application/EpostBundle/Resources/views/Epost/edit.html.twig
@@ -29,7 +29,51 @@ $( "#form_bis" ).datepicker( "option", "minDate", selectedDate );
 
 
 {% endblock %}
+{% block stylesheets %}
+{{ parent() }}
+<link rel="stylesheet" href="{{ asset('bundles/applicationchangements/css/sliding.css') }}" type="text/css" media="all"/>
+<link rel="stylesheet" href="{{ asset('select2/select2.css') }}" type="text/css" media="all"/>
+<style>
+        .monlabel {
+            font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+            font-weight: bold;
+        }
+        .boxlist {
+            border: 1px solid #D4E0EE;
+            background-color: #f1f1f1;
 
+        }
+
+        .mytextarea {
+            border: 1px solid #D4E0EE;
+            background-color: #f1f1f1;
+            width:330px; height:100px;
+
+        }
+        .myresume {
+            border: 1px solid #D4E0EE;
+         /*   background-color: #f1f1f1;*/
+            width:330px; 
+            height:100px;
+
+        }
+        .leserreurs {
+            font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+            font-weight: bold;
+            font-size:18px;
+            color:red;
+        }
+        tr.single {
+         background-color: #f1f1f1;
+        }
+
+    </style> 
+{% endblock %}
+    
+    
+    
+    
+    
 
 {% block content_header '' %}
 {% block title %}
@@ -42,7 +86,7 @@ POST: {{ entity.name }}
  <form action="{{ path('epost_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
      <table class="table table-bordered">
     <tbody>      
-        <tr><td>
+        <tr class="single"><td>
                  <div>
                   {{ form_row(edit_form.name) }}
                            {{ form_row(edit_form.idStatus) }}
@@ -69,7 +113,13 @@ POST: {{ entity.name }}
  <td>
          
  {{ form_row(edit_form.description) }}
-     {{ form_row(edit_form.resume) }}
+     <hr>
+    {# {{ form_row(edit_form.resume) }}#}
+       {{ form_errors(edit_form.resume) }}
+      
+     {{ form_label(edit_form.resume) }}
+      
+     {{ form_widget(edit_form.resume, { 'attr': {'class': 'myresume'} }) }}
  </td>
  
  <td>{% if entity.image is not null %}               
@@ -83,7 +133,7 @@ POST: {{ entity.name }}
    
                                  </tr>
                                      
-<tr><td colspan="2">
+ <tr class="single"><td colspan="3">
  {{ form_rest(edit_form) }}                                  
   <button type="submit" class="btn btn-small btn-warning">Modifier</button>
   
