--- a/src/Application/EservicesBundle/Resources/views/EserviceGroup/show.html.twig
+++ b/src/Application/EservicesBundle/Resources/views/EserviceGroup/show.html.twig
@@ -57,7 +57,8 @@ DETAILS DU GROUPE: {{ entity.nomGroup }}
 <table class="table table-striped table-bordered table-hover">
      
        <thead>
-        <tr class="title"><th>Nom</th><th>Email</th></tr>
+        <tr class="title"><th>Nom</th><th>Email</th>
+       <th>Posts</th><th>Commentaires</th> </tr>
   <tbody>
       </thead>    
      {# <tr><td>{{ entity.users|length }}</td></tr>#}
@@ -66,6 +67,8 @@ DETAILS DU GROUPE: {{ entity.nomGroup }}
             <td>{{ myuser.username }}</td>
            
               <td>{{ myuser.email }}</td>
+              <td></td>
+               <td></td>
                 </tr>
 {% endfor %}     
       
