--- a/src/Application/RelationsBundle/Resources/views/DemandeUsergroup/show.html.twig
+++ b/src/Application/RelationsBundle/Resources/views/DemandeUsergroup/show.html.twig
@@ -2,8 +2,8 @@
 
   {% block stylesheets %}
 {{ parent() }}
-      <link rel="stylesheet" href="{{ asset('bundles/applicationrelations/css/sliding.css') }}" type="text/css" media="all"/>
-     
+<link rel="stylesheet" href="{{ asset('bundles/applicationrelations/css/sliding.css') }}" type="text/css" media="all"/>
+
  {% endblock %}
 
 {% block content_header '' %}
@@ -14,33 +14,33 @@
 {% block content %}
 {% for type, flashMessages in app.session.flashbag.all() %}
     {% for flashMessage in flashMessages %}
-        <div class="alert alert-{{ type }}">
+<div class="alert alert-{{ type }}">
             {{ flashMessage|trans }}
-        </div>
+    </div>
     {% endfor %}
 {% endfor %}
 
- <a href="{{ path('groupedemande') }}" class="btn btn-small btn-success">Retour</a>
+    <a href="{{ path('groupedemande') }}" class="btn btn-small btn-success">Retour</a>
  {% if is_granted("ROLE_ADMIN") %}
- <a href="{{ path('groupedemande_edit', { 'id': entity.id }) }}" class="btn btn-small btn-warning">Editer</a>
+    <a href="{{ path('groupedemande_edit', { 'id': entity.id }) }}" class="btn btn-small btn-warning">Editer</a>
 {% endif %}
- <br> <br> 
- 
-<br><br>
-   <table class="table table-striped table-bordered table-hover">
+    <br> <br> 
 
-    <tbody>
-        <tr>
-                <th>Id</th>
+    <br><br>
+    <table class="table table-striped table-bordered table-hover">
+
+        <tbody>
+            <tr>
+                <th>Identifiant</th>
                 <td>{{ entity.id }}</td>
             </tr>
-            
+
             <tr>
                 <th>Demande</th>
                 <td>{{ entity.description }}</td>
             </tr>
-             <tr>
-                <th>Username</th>
+            <tr>
+                <th>Utilisateur</th>
                 <td>{{ entity.iduser.username }}</td>
             </tr>
             <tr>
@@ -48,20 +48,24 @@
                 <td>{{ entity.idgroup.nomGroup }}</td>
             </tr>
             <tr>
-                <th>Isaccepted</th>
-                <td>{{ entity.isaccepted }}</td>
-            </tr>
-        </tbody>
-    </table>
+                <th>Status de la demande</th>
+                <td>
+                {% if entity.isaccepted is not null %}
+                        NON
+                {% else %} OUI
+                {% endif %}</td>
+                </tr>
+            </tbody>
+        </table>
 
-        
-  
-  
-   
+
+
+
+
         <form action="{{ path('groupedemande_delete', { 'id': entity.id }) }}" method="post">
             <input type="hidden" name="_method" value="DELETE" />
             {{ form_widget(delete_form) }}
             <button type="submit">Delete</button>
         </form>
-    
+
 {% endblock %}
