--- a/src/Application/EpostBundle/Resources/views/Epost/index.html.twig
+++ b/src/Application/EpostBundle/Resources/views/Epost/index.html.twig
@@ -136,8 +136,8 @@ MES POSTS
             <tr>
                 
                 
-                <td><a href="{{ path('epost_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                <td>{{ entity.name }}</td>
+                <td>{{ entity.id }}</td>
+                <td><a href="{{ path('epost_show', { 'id': entity.id }) }}">{{ entity.name }}</a></td>
                  {% if entity.categorie is not null %}               
                   <td>{{ entity.categorie.nom }}</td>
                   {% else %}
@@ -182,7 +182,9 @@ MES POSTS
            
                   
                      <td>
-                    <a href="{{ path('epost_show', { 'id': entity.id }) }}">
+                               <a href="{{ path('epost_showstandard', { 'blog_id': entity.id,'slug': entity.slug }) }}">
+             
+             {#       <a href="{{ path('epost_show', { 'id': entity.id }) }}">#}
                         <img src="{{ asset('bundles/applicationepost/images/detail.png') }}" alt="show" width="15" height="15" />
                     </a>
                 </td>
@@ -246,8 +248,10 @@ MES POSTS
             <tr>
                 
                 
-                <td><a href="{{ path('epost_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                <td>{{ entity.name }}</td>
+                <td>{{ entity.id }}</td>
+             
+                   <td><a href="{{ path('epost_show', { 'id': entity.id }) }}">{{ entity.name }}</a></td>
+            
                  {% if entity.categorie is not null %}               
                   <td>{{ entity.categorie.nom }}</td>
                   {% else %}
@@ -291,7 +295,9 @@ MES POSTS
                   <td>---</td>
                   {% endif %}
                      <td>
-                    <a href="{{ path('epost_show', { 'id': entity.id }) }}">
+                             <a href="{{ path('epost_showstandard', { 'blog_id': entity.id,'slug': entity.slug }) }}">
+             {#
+                    <a href="{{ path('epost_show', { 'id': entity.id }) }}">#}
                         <img src="{{ asset('bundles/applicationepost/images/detail.png') }}" alt="show" width="15" height="15" />
                     </a>
                 </td>
