--- a/src/Application/EpostBundle/Resources/views/Epost/indexadmin.html.twig
+++ b/src/Application/EpostBundle/Resources/views/Epost/indexadmin.html.twig
@@ -105,7 +105,9 @@ POSTS DISPONIBLES
                   <td>---</td>
                   {% endif %}   
                      <td>
-                    <a href="{{ path('epost_show', { 'id': entity.id }) }}">
+                    <a href="{{ path('epost_showstandard', { 'blog_id': entity.id,'slug': entity.slug }) }}">
+             
+             {#       <a href="{{ path('epost_show', { 'id': entity.id }) }}">#}
                         <img src="{{ asset('bundles/applicationepost/images/detail.png') }}" alt="show" width="15" height="15" />
                     </a>
                 </td>
