--- a/src/Application/EpostBundle/Resources/views/Epost/indexmesposts.html.twig
+++ b/src/Application/EpostBundle/Resources/views/Epost/indexmesposts.html.twig
@@ -62,7 +62,7 @@ MES POSTS
               {{  entity.description|slice(0, 25)|replace({"\n":"--"})|raw }}#}
             <tr>
                 
-                
+             
                 <td><a href="{{ path('epost_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.name }}</td>
                  {% if entity.categorie is not null %}               
@@ -109,7 +109,9 @@ MES POSTS
                   {% endif %}  
                   
                      <td>
-                    <a href="{{ path('epost_show', { 'id': entity.id }) }}">
+
+                    <a href="{{ path('epost_showstandard', { 'blog_id': entity.id,'slug': entity.slug }) }}">
+{#                    <a href="{{ path('epost_show', { 'id': entity.id }) }}">#}
                         <img src="{{ asset('bundles/applicationepost/images/detail.png') }}" alt="show" width="15" height="15" />
                     </a>
                 </td>
