--- a/src/Application/EpostBundle/Resources/views/Epost/indexpropositions.html.twig
+++ b/src/Application/EpostBundle/Resources/views/Epost/indexpropositions.html.twig
@@ -49,8 +49,10 @@ POSTS DE MON GROUPE
         {% for entity in paginationa %}
             <tr>
                 
-                
-                <td><a href="{{ path('epost_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
+               <td>  
+                      <a href="{{ path('epost_showstandard', { 'blog_id': entity.id,'slug': entity.slug }) }}">
+                   </a></td>
+            {#    <td><a href="{{ path('epost_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>#}
                 <td>{{ entity.name }}</td>
                  {% if entity.categorie is not null %}               
                   <td>{{ entity.categorie.nom }}</td>
@@ -97,7 +99,8 @@ POSTS DE MON GROUPE
                   <td>---</td>
                   {% endif %}     
                      <td>
-                    <a href="{{ path('epost_show', { 'id': entity.id }) }}">
+                           <a href="{{ path('epost_showstandard', { 'blog_id': entity.id,'slug': entity.slug }) }}">
+                {#    <a href="{{ path('epost_show', { 'id': entity.id }) }}">#}
                         <img src="{{ asset('bundles/applicationepost/images/detail.png') }}" alt="show" width="15" height="15" />
                     </a>
                 </td>
