--- a/src/Application/EpostBundle/Resources/views/Epost/standardblog.html.twig
+++ b/src/Application/EpostBundle/Resources/views/Epost/standardblog.html.twig
@@ -13,6 +13,20 @@ POSTS DISPONIBLES
 {% block content %}
 
 
+
+
+{% block categories %}
+{{ parent() }}
+{% include 'ApplicationEpostBundle:sidebar:sidebarcategories.html.twig' %}
+{% endblock %}
+
+  
+    
+{% block tags %}
+{{ parent() }}
+{% include 'ApplicationEpostBundle:sidebar:sidebartags.html.twig' %}
+{% endblock %}
+
 {% for type, flashMessages in app.session.flashbag.all() %}
     {% for flashMessage in flashMessages %}
         <div class="alert alert-{{ type }}">
@@ -48,7 +62,7 @@ POSTS DISPONIBLES
            
                 <span class="sonata-blog-post-author"> 
                   
-                        <a href="{{ path('epost_show', { 'id': entity.id }) }}">
+                         <a href="{{ path('epost_showstandard', { 'blog_id': entity.id,'slug': entity.slug }) }}">
                           {{ entity.name }}</a>
     {% if entity.proprietaire is not null %}               
                     Par {{ entity.proprietaire.username }}
@@ -77,7 +91,7 @@ POSTS DISPONIBLES
                  ---
                   {% endif %}   
                    
-                    <a href="{{ path('epost_show', { 'id': entity.id }) }}">
+                    <a href="{{ path('epost_showstandard', { 'blog_id': entity.id,'slug': entity.slug }) }}">
                         <img src="{{ asset('bundles/applicationepost/images/detail.png') }}" alt="show" width="15" height="15" />
                     </a>
                              
@@ -101,3 +115,16 @@ POSTS DISPONIBLES
  {{ knp_pagination_render(paginationa) }}
 
 {% endblock %}
+
+
+ {#
+{% block comments %}
+{% include 'ApplicationSonataNewsBundle:sidebar:lastcomments.html.twig' %}
+{% endblock %}
+
+
+{% block archives %}
+{{ parent() }}
+{% include 'ApplicationSonataNewsBundle:sidebar:sidebaryears.html.twig' %}
+{% endblock %}
+#}
