--- a/src/Application/EservicesBundle/Resources/views/EserviceGroup/index.html.twig
+++ b/src/Application/EservicesBundle/Resources/views/EserviceGroup/index.html.twig
@@ -45,9 +45,9 @@ DASHBOARD - GROUPES
                 <th>Description</th>
                 <th>Email</th>
                 {% if is_granted("ROLE_ADMIN") %} 
-                 <th colspan="2">Actions</th>
+                 <th colspan="3">Actions</th>
                 {% else %}
-                <th>Actions</th>
+                 <th colspan="2">Actions</th>
                 {% endif %}
 
             </tr>
@@ -55,7 +55,11 @@ DASHBOARD - GROUPES
         <tbody>
          
         {% for entity in entities %}
+            {% if entity.id == idgroup %}
+            <tr class="success">
+            {% else %}
             <tr>
+                {% endif %}
                 
                 <td><a href="{{ path('egroup_groupes_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.nomGroup }}</td>
@@ -77,7 +81,7 @@ DASHBOARD - GROUPES
     {% endif %}
                  
                   
-{% if is_granted("ROLE_USER") %}  
+{% if is_granted("ROLE_USER") and  idgroup ==0 %}  
                 <td>
                     <a href="{{ path('groupedemande_newdemande', { 'id': entity.id }) }}">++</a>
                 </td>
