--- a/src/Application/EservicesBundle/Resources/views/EserviceGroup/show.html.twig
+++ b/src/Application/EservicesBundle/Resources/views/EserviceGroup/show.html.twig
@@ -17,7 +17,6 @@ DETAILS DU GROUPE: {{ entity.nomGroup }}
 
 <a href="{{ path('egroup_groupes_edit', { 'id': entity.id }) }}" class="btn btn-small btn-warning">Editer</a> 
   {% endif %}
-  
 
   <table class="table table-striped table-bordered table-hover">
         <tbody>
@@ -40,7 +39,9 @@ DETAILS DU GROUPE: {{ entity.nomGroup }}
         </tbody>
     </table>
 
-      
+    {% if status_group == true %}
+<a href="{{ path('egroup_quitter') }}" class="btn btn-small btn-danger">Quitter ce groupe</a>
+  {% endif %}  
    
     {#
     <li>
@@ -58,7 +59,9 @@ DETAILS DU GROUPE: {{ entity.nomGroup }}
      
        <thead>
         <tr class="title"><th>Nom</th><th>Email</th>
-       <th>Posts</th><th>Commentaires</th> </tr>
+       <th>Posts</th>
+       {#<th>Commentaires</th>#}
+        </tr>
   <tbody>
       </thead>    
      {# <tr><td>{{ entity.users|length }}</td></tr>#}
@@ -67,8 +70,10 @@ DETAILS DU GROUPE: {{ entity.nomGroup }}
             <td>{{ myuser.username }}</td>
            
               <td>{{ myuser.email }}</td>
-              <td></td>
-               <td></td>
+              <td>{{ myuser.epost|length }}</td>
+            {#   <td>{{ myuser.epost.comments|length }}</td>#}
+            {#  
+               <td></td>#}
                 </tr>
 {% endfor %}     
       
