--- a/src/Application/RelationsBundle/Resources/views/DemandeUsergroup/edit.html.twig
+++ b/src/Application/RelationsBundle/Resources/views/DemandeUsergroup/edit.html.twig
@@ -10,10 +10,19 @@
 {% block title %}EDITION DEMANDE DE GROUPE{% endblock %}
 {% block content %}
 
+
+{% for type, flashMessages in app.session.flashbag.all() %}
+    {% for flashMessage in flashMessages %}
+<div class="alert alert-{{ type }}">
+            {{ flashMessage|trans }}
+    </div>
+    {% endfor %}
+{% endfor %}
+
  <a href="{{ path('groupedemande') }}" class="btn btn-large btn-success">Retour</a>
 
-    <form action="{{ path('groupedemande_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
-        <input type="hidden" name="_method" value="PUT" />
+    <form action="{{ path('groupedemande_edit', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
+      {#  <input type="hidden" name="_method" value="PUT" />#}
         {{ form_widget(edit_form) }}
         <p>
             <button type="submit" class="btn btn-large btn-warning">Edit</button>
