--- a/src/Application/RelationsBundle/Resources/views/DemandeUsergroup/index.html.twig
+++ b/src/Application/RelationsBundle/Resources/views/DemandeUsergroup/index.html.twig
@@ -23,9 +23,9 @@
     {% endfor %}
 {% endfor %}
 
-    {% if is_granted("ROLE_ADMIN") %}
+   {# {% if is_granted("ROLE_ADMIN") %}#}
     <a href="{{ path('groupedemande_new') }}" class="btn btn-medium btn-primary">Ajouter Demande de groupe</a>
-    {% endif %}
+    {#{% endif %}#}
     
     <br> <br>  
     <table class="table table-striped table-bordered table-hover">
@@ -64,7 +64,9 @@
                     </a>
                 </td>
                 <td>
+                   
                     <a href="{{ path('groupedemande_edit', { 'id': entity.id }) }}">
+                       
                         <img src="{{ asset('bundles/applicationrelations/images/edit.png') }}" alt="edit" width="15" height="15" />
                     </a>
                 </td>
