--- a/src/Application/EpostBundle/Resources/views/Epost/indexpropositions.html.twig
+++ b/src/Application/EpostBundle/Resources/views/Epost/indexpropositions.html.twig
@@ -55,7 +55,7 @@ POSTS DE MON GROUPE
             {#    <td><a href="{{ path('epost_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>#}
                 <td>{{ entity.name }}</td>
                  {% if entity.categorie is not null %}               
-                  <td>{{ entity.categorie.nom }}</td>
+                  <td>{{ entity.categorie.name }}</td>
                   {% else %}
                   <td>---</td>
                   {% endif %}
