--- a/src/Application/EservicesBundle/Resources/views/Eproduit/index.html.twig
+++ b/src/Application/EservicesBundle/Resources/views/Eproduit/index.html.twig
@@ -107,7 +107,7 @@ MES PRODUITS
               <th>{{ knp_pagination_sortable(paginationa, 'Id', 'a.id') }}</th>
     
  <th{% if paginationa.isSorted('a.name') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Nom', 'a.name') }}</th>
- <th{% if paginationa.isSorted('c.nom') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Categorie', 'c.nom') }}</th>
+ <th{% if paginationa.isSorted('c.name') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Categorie', 'c.name') }}</th>
  <th{% if paginationa.isSorted('d.idStatus.nom') %} class="sorted"{% endif %}>
 {{ knp_pagination_sortable(paginationa, 'S', 'd.idStatus.nom') }}
                    <i class="icon-flag"></i></th> 
@@ -131,7 +131,7 @@ MES PRODUITS
                 <td><a href="{{ path('eproduit_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.name }}</td>
                  {% if entity.categorie is not null %}               
-                  <td>{{ entity.categorie.nom }}</td>
+                  <td>{{ entity.categorie.name }}</td>
                   {% else %}
                   <td>---</td>
                   {% endif %}
@@ -221,7 +221,7 @@ MES PRODUITS
         <tr class="title"> 
                  <th>Id</th>
                 <th>Name</th>
-                <th{% if paginationb.isSorted('c.nom') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationb, 'Categorie', 'c.nom') }}</th>
+                <th{% if paginationb.isSorted('c.name') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationb, 'Categorie', 'c.name') }}</th>
                 <th{% if paginationb.isSorted('b.username') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationb, 'Proprietaire', 'b.username') }}</th>
                <th{% if paginationb.isSorted('d.idStatus.nom') %} class="sorted"{% endif %}>
 {{ knp_pagination_sortable(paginationb, 'S', 'd.idStatus.nom') }}
@@ -242,7 +242,7 @@ MES PRODUITS
                 <td><a href="{{ path('eproduit_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.name }}</td>
                  {% if entity.categorie is not null %}               
-                  <td>{{ entity.categorie.nom }}</td>
+                  <td>{{ entity.categorie.name }}</td>
                   {% else %}
                   <td>---</td>
                   {% endif %}
