--- a/src/Application/EservicesBundle/Resources/views/Eproduit/indexadmin.html.twig
+++ b/src/Application/EservicesBundle/Resources/views/Eproduit/indexadmin.html.twig
@@ -29,7 +29,7 @@ PRODUITS DISPONIBLES
               <th>{{ knp_pagination_sortable(paginationa, 'Id', 'a.id') }}</th>
     
  <th{% if paginationa.isSorted('a.name') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Nom', 'a.name') }}</th>
- <th{% if paginationa.isSorted('c.nom') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Categorie', 'c.nom') }}</th>
+ <th{% if paginationa.isSorted('c.name') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Categorie', 'c.name') }}</th>
  <th{% if paginationa.isSorted('b.username') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Proprietaire', 'b.username') }}</th>
        <th{% if paginationa.isSorted('d.idStatus.nom') %} class="sorted"{% endif %}>
 {{ knp_pagination_sortable(paginationa, 'S', 'd.idStatus.nom') }}
@@ -53,7 +53,7 @@ PRODUITS DISPONIBLES
                 <td><a href="{{ path('eproduit_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.name }}</td>
                    {% if entity.categorie is not null %}               
-                  <td>{{ entity.categorie.nom }}</td>
+                  <td>{{ entity.categorie.name }}</td>
                   {% else %}
                   <td>---</td>
                   {% endif %}
