--- a/src/Application/EservicesBundle/Resources/views/Eproduit/indexmesproduits.html_1.twig
+++ b/src/Application/EservicesBundle/Resources/views/Eproduit/indexmesproduits.html_1.twig
@@ -62,7 +62,7 @@ MES PRODUITS
                 <td><a href="{{ path('eproduit_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.name }}</td>
                  {% if entity.categorie is not null %}               
-                  <td>{{ entity.categorie.nom }}</td>
+                  <td>{{ entity.categorie.name }}</td>
                   {% else %}
                   <td>---</td>
                   {% endif %}
