--- a/src/Application/EservicesBundle/Resources/views/Eproduit/show.html.twig
+++ b/src/Application/EservicesBundle/Resources/views/Eproduit/show.html.twig
@@ -50,7 +50,7 @@ PRODUIT: {{ entity.name }}
             <tr>
                 <th>Categorie</th>
                  {% if entity.categorie is not null %}               
-               <td> {{ entity.categorie.nom }}</td>
+               <td> {{ entity.categorie.name }}</td>
                  {% else %}
                   <td>---</td>
                   {% endif %}
