--- a/src/Application/ChangementsBundle/Resources/views/Changements/show.html.twig
+++ b/src/Application/ChangementsBundle/Resources/views/Changements/show.html.twig
@@ -22,6 +22,7 @@
 {% block title %}DETAILS CHANGEMENT:  {{ entity.nom }} {% endblock %}
 {% block content %}
 
+<br> <br> 
 <a href="{{ path('changements') }}" class="btn btn-medium btn-success">Retour</a>
 
  {% if is_granted("ROLE_USER") %}
@@ -134,6 +135,15 @@
        {% endfor %#}
                         </td>
                     </tr>
+                    
+                     <tr>
+                <th>Ticket Externe</th>
+                <td>{{ entity.ticketExt }}</td>
+            </tr>
+             <tr>
+                <th>Ticket Interne</th>
+                <td>{{ entity.ticketInt }}</td>
+            </tr>
 
 
                 </tbody>
