--- a/src/Application/EpostBundle/Resources/views/Epost/indexmesposts.html.twig
+++ b/src/Application/EpostBundle/Resources/views/Epost/indexmesposts.html.twig
@@ -126,7 +126,9 @@ MES POSTS
                     </a>
                 </td>
                 
-                
+   <td>                 <a href="{{ path('epost_addmyimage', { 'id': entity.id }) }}">Add Image      </a>
+   
+                </td>
             </tr>
         {% endfor %}
         </tbody>
