--- a/src/Application/CertificatsBundle/Resources/views/CertificatsCenter/edit.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/CertificatsCenter/edit.html.twig
@@ -12,7 +12,7 @@ $(document).ready(function() {
   $( "#moncert_endTime" ).datepicker({
 maxDate: "+3M +10D",
 changeMonth: true,
-changeYeat: true,
+changeYear: true,
 numberOfMonths: 1,
 dateFormat: "yy-mm-dd",
 onClose: function( selectedDate ) {
@@ -22,7 +22,7 @@ $( "#form_bis" ).datepicker( "option", "minDate", selectedDate );
     $( "#moncert_addedDate" ).datepicker({
 maxDate: "+3M +10D",
 changeMonth: true,
-changeYeat: true,
+changeYear: true,
 numberOfMonths: 1,
 dateFormat: "yy-mm-dd",
 onClose: function( selectedDate ) {
@@ -32,7 +32,7 @@ $( "#form_bis" ).datepicker( "option", "minDate", selectedDate );
   $( "#moncert_startDate" ).datepicker({
 maxDate: "+3M +10D",
 changeMonth: true,
-changeYeat: true,
+changeYear: true,
 numberOfMonths: 1,
 dateFormat: "yy-mm-dd",
 onClose: function( selectedDate ) {
