--- a/src/Application/EpostBundle/Resources/views/Epost/indexmesposts.html.twig
+++ b/src/Application/EpostBundle/Resources/views/Epost/indexmesposts.html.twig
@@ -125,8 +125,10 @@ MES POSTS
                         <img src="{{ asset('bundles/applicationepost/images/delete.png') }}" alt="delete" width="15" height="15" />
                     </a>
                 </td>
-                
-   <td>                 <a href="{{ path('epost_addmyimage', { 'id': entity.id }) }}">Add Image      </a>
+                <td>
+                        <a href="{{ path('epost_addmyimage', { 'id': entity.id }) }}">
+               <img src="{{ asset('bundles/applicationepost/images/down2.jpg') }}" alt="delete" width="15" height="15" />
+                   </a>
    
                 </td>
             </tr>
